app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-app
  template:
    metadata:
      labels:
        app: hr-app
    spec:
      containers:
      - name: hr-app
        image: rishabhmishra01/hr-app-management-system-main-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hr-service
spec:
  selector:
    app: hr-app
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
