httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: lijaz-namespace
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "*"       
  rules:
    - matches:
        - path:
            type: Prefix
            value: "/"         # root path
      backendRefs:
        - name: hr-service        # the service name
          port: 3000
